cluster/apps/network/opnsense/app/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  namespace: network
  name: opnsense
subsets:
  - addresses:
      - ip: 10.0.70.1
    ports:
      - port: 443
