cluster/apps/network/opnsense/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opnsense
  namespace: network
spec:
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
