cluster/apps/network/opnsense/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opnsense-proxy
  namespace: network
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - host: opnsense.${DOMAIN}
    http:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: opnsense
            port:
              number: 443
  tls:
  - hosts:
    - opnsense.${DOMAIN}
